--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.5.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
